--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
+    <meta charset="utf-8">
+    <title>Twittler Project - Kenny Cao </title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,500">
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.timeago.js" type="text/javascript"></script>
+    <script src="js/data_generator.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
-    <script>
 
-      $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+    <header class="container group">
+      <img src="img/twitter-logo.png" alt="Twitter Logo">
+      <div class="title">
+        <h1>Twittler Project</h1>
+        <h3>Generate real time tweets</h3>
+      </div>
+    </header>
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
+    <div class="grid group">
+      <aside class="col-1-3">
+        <div class="side-info">
+         <h2>Current Page</h2>
+         <div id="current-view">
+            <p>All Tweets</p>
+         </div>
+        </div>
+      </aside><!--
 
-      });
+      --><section class="col-2-3">
+        <div class="main-tweets">
+          <h2>Recent Tweets</h2>
+<!--           <form>
+            <label for='visitor-tweet'>Write your own Tweet: </label>
+            <input type="text" id="visitor-tweet" />
+            <input type="submit" name="submit" value="Send">
+          </form> -->
+          <button type="button" class="btn btn-alt">New Tweets</button>
+          <div id="tweet-streams">
+          </div> 
+        </div>
+      </section>
+    </div>
 
-    </script>
+    <footer class="container group">
+      <p>&copy; Twittler Project 2017 - Kenny Cao</p>
+    </footer>
+
   </body>
 </html>
