Add write your own tweet functionality

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       --><section class="col-2-3">
         <div class="main-tweets">
           <h2>Recent Tweets</h2>
-<!--           <form>
+          <form id="tweet-submit">
             <label for='visitor-tweet'>Write your own Tweet: </label>
             <input type="text" id="visitor-tweet" />
             <input type="submit" name="submit" value="Send">
-          </form> -->
+          </form>
           <button type="button" class="btn btn-alt">New Tweets</button>
           <div id="tweet-streams">
-          </div> 
+          </div>
         </div>
       </section>
     </div>
